# CMAKE_GARDEN

./: CMakeLists.txt
src/: main.cpp
src/private/: Character.cpp  Dot.cpp  Entity.cpp  World.cpp
src/public/: Character.h  Dot.h  Entity.h  World.h
